# TSEL

./: .gitignore  DETERMINISTIC_GUARDRAILS.md  EEG_COLLECTION_QUALITY_DIAGNOSTICS.md  EEG_HANDLING_AUDIT.md  EEG_MINIMUM_INFORMATION.md  EEG_PROFILE_SPEC.md  OLFACTORY_COLLECTION_QUALITY_DIAGNOSTICS.md  OLFACTORY_HANDLING_AUDIT.md  OLFACTORY_MINIMUM_INFORMATION.md  OLFACTORY_PROFILE_SPEC.md  README.md  RQ_EVIDENCE_MATRIX.md  THESIS_VALIDATION_SUMMARY.md  balance_diagnostics.json  collection_quality_diagnostics.md  pyproject.toml  supported_structure_test_summary.md  unification_integrity.md
examples/configs/: demo_manifest.json  eeg_direct.json  eeg_edf.json  eeg_timeseries.json  environment.json  multisensory_matrix.json  olfaction.json  temporal_states.json
external_data/: SOURCES.md
standards/: TSEL_SPEC.md  tsel-bundle.schema.json  tsel-event.schema.json  vocabulary.json
tests/: test_autorouting.py  test_eeg_profiles.py  test_general_profiles.py  test_guardrails.py  test_olfactory_profiles.py  test_packet_profiles.py  test_pipeline.py  test_sourced_data.py  test_standard.py  test_supported_recovery.py  test_synapse_data.py  test_unification_integrity.py  test_viewer.py
tools/: export_standard_assets.py  import_synapse_dream_data.py  prepare_sourced_data.py  run_balance_diagnostics.py
tsel/: __init__.py  adapters.py  autorouting.py  balance_diagnostics.py  cli.py  config.py  edf.py  eeg_profiles.py  experience.py  general_profiles.py  models.py  olfactory_profiles.py  packet_profiles.py  pipeline.py  serializers.py  standards.py
viewer/: __init__.py  app.py
(+31 files in other folders)
